--- a/project/client.html
+++ b/project/client.html
@@ -3,7 +3,57 @@
     <link href="client.css" type="text/css" rel="stylesheet">
     <script src="client.js" type="text/javascript"></script>
     <script src="serverstub.js" type="text/javascript"></script>
+
+    <script type=”text/view” id="welcomeview">
+      <section id="welcome">
+          <div class="logo">
+            <img src="wimage.png" alt="placeholder">
+          </div>
+
+
+        <div class="login">
+          <form id="signinform" onsubmit="logIn(event)">
+            <label>Email</label> <input type="email" name="email" value="" required><br>
+            <label>Password</label> <input type="text" minlength=6 name="password"  value="" required><br>
+            <button type="submit" id="loginbutton">login</button>
+            <div id="loginfail"></div>
+          </form>
+        </div>
+
+        <div class="signup">
+          <h2> Sign up here </h2>
+          <form id="signupform" >
+            <label>First name</label> <input type="text" name="firstname" value="" required><br>
+            <label>Last name</label> <input type="text" name="lastname" value="" required><br>
+            <label>Gender</label>
+            <select name="gender">
+              <option value="male"> Male </option>
+              <option value = "female"> Female </option>
+            </select><br>
+            <label>City</label> <input type="text" name="city" value="" required><br>
+            <label>Country</label> <input type="text" name="country" value="" required><br>
+            <label>Email</label> <input type="email" name="email" value="" required><br>
+            <label>Password</label> <input id="signin_password" type="text" minlength=6 name="password"  value="" required><br>
+            <label>Repeat pwd</label> <input id="repeat_password" type="text" name="repeatpwd" value="" required><br>
+            <button id="signupbutton" type="submit">SignUp</button>
+          </form>
+        </div>
+      </section>
+    </script>
+
+    <script  type="text/view" id="profileview">
+      <section id="profile">
+        <h1>P R O F I L  E B O I S</h1>
+        <form id="signoutform" onsubmit="logOut()">
+          <button id="signout_button" type="submit">Sign out</button>
+        </form>
+      </section>
+    </script>
   </head>
+
   <body>
+    <div id="view">
+    </div>
+
   </body>
 </html>
