--- a/project/client.html
+++ b/project/client.html
@@ -4,6 +4,7 @@
     <script src="client.js" type="text/javascript"></script>
     <script src="serverstub.js" type="text/javascript"></script>
 
+    <!-- Welcome view -->
     <script type=”text/view” id="welcomeview">
       <section id="welcome">
           <div class="logo">
@@ -41,9 +42,28 @@
       </section>
     </script>
 
+    <!-- Profile view -->
     <script  type="text/view" id="profileview">
       <section id="profile">
-        <h1>P R O F I L  E B O I S</h1>
+        <!-- Tab buttons -->
+        <div class="tabs">
+          <button class="taboptions active" id="home_btn"> Home </button>
+          <button class="taboptions" id="browse_btn"> Browse </button>
+          <button class="taboptions" id="acc_btn"> Account </button>
+        </div>
+
+        <div class="tab_content" id="home_tab">
+          <h1> H O M E B O I S</h1>
+        </div>
+
+        <div class="tab_content" id="browse_tab">
+          <h1> B R O W S E B O I S</h1>
+        </div>
+
+        <div class="tab_content" id="acc_tab">
+          <h1> A C C B O I S</h1>
+        </div>
+
         <form id="signoutform" onsubmit="logOut()">
           <button id="signout_button" type="submit">Sign out</button>
         </form>
